# CodeGraph

./: .gitignore  README.md  pyproject.toml
backend/: cli.py  config.py  database.py  main.py  models.py  utils.py
backend/ai/: openai_provider.py  provider.py
backend/analysis/: graph_builder.py  incremental.py  languages.py  parser.py
backend/routers/: bookmarks.py  branches.py  export.py  graph.py  project.py  settings.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/branches/: BranchCompare.tsx  BranchDropdown.tsx
frontend/src/components/common/: BookmarkDropdown.tsx  ContextMenu.tsx  Modal.tsx  ShortcutOverlay.tsx  Toast.tsx
frontend/src/components/detail/: AIExplanation.tsx  CodeSnippet.tsx  Connections.tsx  DetailPanel.tsx  TestStatus.tsx
frontend/src/components/export/: ExportMenu.tsx
frontend/src/components/graph/: CustomEdge.tsx  CustomNode.tsx  GraphCanvas.tsx  ZoomControls.tsx
frontend/src/components/impact/: ImpactOverlay.tsx  ImpactSummaryBar.tsx
frontend/src/components/layout/: Breadcrumbs.tsx  MainLayout.tsx  TabsBar.tsx  TopBar.tsx
frontend/src/components/onboarding/: GitHubImport.tsx  LandingPage.tsx  OnboardingTooltips.tsx  (+1 more)
frontend/src/hooks/: useGraphLayout.ts  useKeyboardShortcuts.ts  useNavigationHistory.ts
frontend/src/store/: graphStore.ts  projectStore.ts  settingsStore.ts  uiStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
frontend/src/utils/: colors.ts  helpers.ts  layout.ts
(+3 files in other folders)
