[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codegraph"
version = "1.0.0"
description = "A living X-ray of your codebase — interactive dependency graph visualization"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.6",
    "openai>=1.30",
    "python-multipart>=0.0.9",
    "gitpython>=3.1",
    "pygments>=2.18",
    "aiofiles>=24.1",
]

[project.scripts]
codegraph = "backend.cli:main"

[tool.setuptools.packages.find]
include = ["backend*"]
